--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fpjson-lang",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && node ./esbuild.mjs",
@@ -14,8 +14,7 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "ramda": "^0.28.0",
-    "recoil": "^0.7.5"
+    "ramda": "^0.28.0"
   },
   "peerDependencies": {
     "react": "^18.2.0"
